# DiagnosisForth

./: CONSENT_GUIDE.md  README.md  TERMS_OF_SERVICE.md  pyproject.toml  test_logger.py
.tmp/: design.md  requirements.md  tasks.md
DiagnosisForth/: __init__.py  consent.py
DiagnosisForth/converters/: bp.py  obabel.py
DiagnosisForth/interactions/: analyzer.py
DiagnosisForth/utils/: logger.py  terms_consent.py
DiagnosisForth/viewers/: utils.py
examples/: pco_example.ipynb  plip_example.ipynb  ppi.ipynb
examples/data/: ligand_0_0-0_out.sdf
kampo/: __init__.py  types.py
kampo/converters/: bp.py  obabel.py
kampo/interactions/: analyzer.py
kampo/readers/: pdb_reader.py
kampo/viewers/: utils.py
shishin/: __init__.py  types.py
tests/: __init__.py  conftest.py
tests/test_converters/: __init__.py  test_bp.py  test_obabel.py
tests/test_data/: sample.pdbqt  sample.sdf
tests/test_readers/: __init__.py  test_pdb_reader.py
